--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.show_sql=true
 
 
-spring.datasource.url=jdbc:h2:mem:testDB
+spring.datasource.url=jdbc:h2:~/test
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
