스프링 AWS 스프링세션 9장 TRAVIS YML S3연동

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,20 @@ branches:
     - master
 before_install:
   chmod +x gradlew
+before_deploy:
+  - zip -r SpringAws
+  - mkdir -p deploy
+  - mv SpringAWS.zip deploy/SpringAWS.zip
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: dellyoo-s3bucket
+    region: ap-northeast-2
+    skip-cleanup: true
+    acl: private
+    local_dir: deploy
+    wait-until-deployed: true
 # TRAVIS ci 서버 HOME
 cache:
   directories:
