스프링 AWS 스프링세션 9장 appspec.yml 코드디플로이 357P

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,18 @@ deploy:
     local_dir: deploy
     wait-until-deployed: true
 
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: dellyoo-s3bucket
+    key: SpringAWS.zip
+    bundle_type: zip
+    application: SpringAWS_codedeploy
+    deployment_group: Spring_AWS_codedeploy_group
+    region: ap-northeast-2
+    wait-until-deployed: true
+
+
 
 #CI 완료후 메일전송
 notifications:
