스프링 AWS 스프링세션 9장 appspec.yml 코드디플로이 357P

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ deploy:
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
     bucket: dellyoo-s3bucket
-    key: SpringAWS.zip
+    key: Spring_AWS2.zip
     bundle_type: zip
     application: SpringAWS_codedeploy
     deployment_group: Spring_AWS_codedeploy_group
