--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script: "./gradlew clean build"
 before_deploy:
   - zip -r SpringAWS *
   - mkdir -p deploy
-  - mv SpringAWS2.zip deploy/SpringAWS2.zip
+  - mv SpringAWS.zip deploy/SpringAWS.zip
 deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY
