--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,18 @@ deploy:
     local_dir: deploy
     wait-until-deployed: true
 
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: spring-bucket2
+    key: Spring_AWS2.zip
+    bundle_type: zip
+    application: aws_codedeploy
+    deployment_group: aws_codedeploy_group
+    region: ap-northeast-2
+    wait-until-deployed: true
+
+
 
 #CI 완료후 메일전송
 notifications:
