--- a/.travis.yml
+++ b/.travis.yml
@@ -13,20 +13,20 @@ cache:
     - '$HOME/.gradle'
 
 script: "./gradlew clean build"
-#
-#before_deploy:
-#  - mkdir -p before-deploy
-#  - cp scripts/*.sh before-deploy/
-#  - cp appspec.yml before-deploy/
-#  - cp build/libs/*.jar before-deploy/
-#  - cd before-deploy && zip -r before-deploy *
-#  - cd ../ && mkdir -p deploy
-#  - mv before-deploy/before-deploy.zip deploy/SpringAWS.zip
 
 before_deploy:
-  - zip -r SpringAWS *
-  - mkdir -p deploy
-  - mv SpringAWS.zip deploy/SpringAWS.zip
+  - mkdir -p before-deploy
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/SpringAWS.zip
+#
+#before_deploy:
+#  - zip -r SpringAWS *
+#  - mkdir -p deploy
+#  - mv SpringAWS.zip deploy/SpringAWS.zip
 deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY
