--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ repositories {
     jcenter()
 }
 
+jar {
+    enabled = false
+}
+
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     compileOnly 'org.projectlombok:lombok'
